force-app/main/default/objects/ContentVersion/fields/cgc_sync__MobileId__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__MobileId__c</fullName>
    <externalId>true</externalId>
    <label>Mobile Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>