force-app/main/default/objects/ContentVersion/fields/cgcloud__Competitor_Tag__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Competitor_Tag__c</fullName>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>