force-app/main/default/objects/ContentVersion/fields/cgcloud__POS_Type_Tag__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__POS_Type_Tag__c</fullName>
    <label>POS Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shelf</fullName>
            </value>
            <value>
                <fullName>SecondPlacement</fullName>
            </value>
            <value>
                <fullName>Fridge</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>