force-app/main/default/objects/ContentVersion/fields/cgcloud__Relative_Position__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Relative_Position__c</fullName>
    <inlineHelpText>Numeric field used to define a sequence for the display of sell sheets files inside a sales folder in mobility (1,2...100)</inlineHelpText>
    <label>Relative Position</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>