force-app/main/default/objects/ContentVersion/recordTypes/cgcloud__Visit_Files.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Visit_Files</fullName>
    <active>true</active>
    <description>Content Version Record Type for Visits</description>
    <label>Visit Files</label>
</RecordType>